compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify10.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 805
expression: "fn main() {\n            let #(y, [..x]): #(x, List(x)) = #(\"one\", [1,2,3])\n            x\n        }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:2:46
  │
2 │             let #(y, [..x]): #(x, List(x)) = #("one", [1,2,3])
  │                                              ^^^^^^^^^^^^^^^^^

Expected type:

    #(a, List(a))

Found type:

    #(String, List(Int))


